# hashsum

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  NEWS.rst  README.md  README.rst  hashsum.py  setup.cfg  setup.py
.github/workflows/: python-package.yml
man/: hashsum.1
po/: hashlib.pot  it.po
tests/: __init__.py  __main__.py  _test_utils.py  benchmarks.py  conftest.py  test_hashsum.py
tests/data/: MD5SUM_binary.txt  MD5SUM_binary_bad.txt  MD5SUM_bsd.txt  MD5SUM_text_unix.txt  MD5SUM_text_win.txt  SHASUM_openssl.txt  SHASUM_openssl_bad.txt  SHASUM_openssl_bad_algoname.txt
