[metadata]
name = hashsum
version = attr: hashsum.__version__
description = Python drop-in replacement for md5sum and co.
long_description = file: README.rst, NEWS.rst
long_description_content_type = text/x-rst
keywords = checksum, hash
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Topic :: Utilities
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
url = https://github.com/avalentino/hashsum
download_url = https://pypi.python.org/pypi/hashsum
author = Antonio Valentino
author_email = antonio.valentino@tiscli.it
platforms = any
# py_modules = hashsum

[options]
packages = find:
zip_safe = True

[options.entry_points]
console_scripts =
    executable-name = hashsum:main

[options.extras_require]
cli = aurgcomplete

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = -p no:warnings -p no:logging
